[package]
name = "rusty-pixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8"
rand_core = "0.6"
rand_xoshiro = "0.6"
show-image = { version = "0.10.1", features = ["image", "save"] }
